# OpenVDB-shell-grid

./: CMakeLists.txt  Instructions.txt  README.md  problem_03.cpp
output_data/: output_info.txt
